--- a/profile.html
+++ b/profile.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
-<head>
-<h1> Welcome to my Page!</h1>
-
-</body>
+  <head>
+    <title> Sample title </title>
+  </head>
+  <body>
+    <h1> Welcome to my Page!</h1>
+  </body>
 </html>
